tests/invalid-gd-scripts/dot_super_call.gd
func _process(delta):
	.process(delta)
